<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    >

    <LinearLayout
        android:id="@+id/auth_signinactivity_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/signinform_layout_marginRight"
        android:layout_marginLeft="@dimen/signinform_layout_marginLeft"
        android:layout_marginRight="@dimen/signinform_layout_marginRight"
        android:layout_marginStart="@dimen/signinform_layout_marginLeft"
        android:background="@drawable/sigininform_background_custom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/auth_username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
                android:layout_marginLeft="@dimen/userid_edittext_marginStart"
                android:layout_marginRight="@dimen/userid_edittext_marginEnd"
                android:layout_marginStart="@dimen/userid_edittext_marginStart"
                android:hint="@string/hint_edittext_userid"
                android:padding="@dimen/userid_edittext_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/auth_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/password_edittext_marginEnd"
                android:layout_marginLeft="@dimen/password_edittext_marginStart"
                android:layout_marginRight="@dimen/password_edittext_marginEnd"
                android:layout_marginStart="@dimen/password_edittext_marginStart"
                android:hint="@string/hint_edittext_password"
                android:inputType="textPassword"
                android:padding="@dimen/password_edittext_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/auth_signin_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/signin_btn_marginbottm"
                android:layout_marginTop="@dimen/signin_btn_margintop"
                android:background="@drawable/signin_btn_custom_background"
                android:text="@string/signin_btn_text"
                android:textColor="@color/colorRed" />
        </LinearLayout>
    </LinearLayout>


    <SlidingDrawer
        android:id="@+id/auth_signupdrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:content="@+id/auth_content_container"
        android:handle="@+id/auth_handlerContainer"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/auth_handlerContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slidingdrawer_handle_height"
            android:background="@drawable/slidingdrawerhandlerdesign"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/regitertext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/regitertext_marginstart"
                android:layout_marginStart="@dimen/regitertext_marginstart"
                android:layout_weight="9"
                android:clickable="false"
                android:gravity="center_vertical"
                android:text="@string/regitertext_textview_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/regitertext_textsize"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/auth_handle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/doubleup_marginend"
                android:layout_marginRight="@dimen/doubleup_marginend"
                android:layout_weight="1"
                android:clickable="false"
                android:src="@drawable/double_up" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/auth_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_background">

            <LinearLayout
                android:id="@+id/auth_registerform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/signinform_layout_marginRight"
                android:layout_marginLeft="@dimen/signinform_layout_marginLeft"
                android:layout_marginRight="@dimen/signinform_layout_marginRight"
                android:layout_marginStart="@dimen/signinform_layout_marginLeft"
                android:background="@drawable/sigininform_background_custom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/auth_r_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
                        android:layout_marginLeft="@dimen/userid_edittext_marginStart"
                        android:layout_marginRight="@dimen/userid_edittext_marginEnd"
                        android:layout_marginStart="@dimen/userid_edittext_marginStart"
                        android:hint="@string/r_hint_edittext_userid"
                        android:padding="@dimen/userid_edittext_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/auth_r_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/password_edittext_marginEnd"
                        android:layout_marginLeft="@dimen/password_edittext_marginStart"
                        android:layout_marginRight="@dimen/password_edittext_marginEnd"
                        android:layout_marginStart="@dimen/password_edittext_marginStart"
                        android:hint="@string/r_hint_edittext_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/password_edittext_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/auth_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/signin_btn_marginbottm"
                        android:layout_marginTop="@dimen/signin_btn_margintop"
                        android:background="@drawable/signin_btn_custom_background"
                        android:text="@string/register_btn_text"
                        android:textColor="@color/colorRed" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </SlidingDrawer>



</FrameLayout>