<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    >

    <LinearLayout
        android:id="@+id/signinactivity_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/sigininform_background_custom"
        android:layout_marginLeft="@dimen/signinform_layout_marginLeft"
        android:layout_marginStart="@dimen/signinform_layout_marginLeft"
        android:layout_marginRight="@dimen/signinform_layout_marginRight"
        android:layout_marginEnd="@dimen/signinform_layout_marginRight"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edittext_userid"
            android:layout_gravity="center"
            android:padding="@dimen/userid_edittext_padding"
            android:layout_marginStart="@dimen/userid_edittext_marginStart"
            android:layout_marginLeft="@dimen/userid_edittext_marginStart"
            android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
            android:layout_marginRight="@dimen/userid_edittext_marginEnd"
            />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edittext_password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:padding="@dimen/password_edittext_padding"
            android:layout_marginStart="@dimen/password_edittext_marginStart"
            android:layout_marginLeft="@dimen/password_edittext_marginStart"
            android:layout_marginEnd="@dimen/password_edittext_marginEnd"
            android:layout_marginRight="@dimen/password_edittext_marginEnd"
            />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/signin_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_btn_text"
            android:textColor="@color/colorRed"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/signin_btn_margintop"
            android:layout_marginBottom="@dimen/signin_btn_marginbottm"
            android:background="@drawable/signin_btn_custom_background"
            />
        </LinearLayout>
    </LinearLayout>

    
    <SlidingDrawer
        android:id="@+id/signupdrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:handle="@+id/auth_handlerContainer"
        android:content="@+id/auth_content_container"
        >

                <LinearLayout
                android:id="@+id/auth_handlerContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slidingdrawer_handle_height"
                android:orientation="horizontal"
                android:weightSum="10"
                android:background="@drawable/slidingdrawerhandlerdesign"
                >
                <TextView
                    android:id="@+id/regitertext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:text="@string/regitertext_textview_text"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorWhite"
                    android:clickable="false"
                    android:textSize="@dimen/regitertext_textsize"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/regitertext_marginstart"
                    android:layout_marginLeft="@dimen/regitertext_marginstart"
                    />

                <ImageView
                    android:id="@+id/auth_handle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:clickable="false"
                    android:layout_marginEnd="@dimen/doubleup_marginend"
                    android:layout_marginRight="@dimen/doubleup_marginend"
                    android:src="@drawable/double_up" />

            </LinearLayout>
                <ScrollView
                    android:id="@+id/auth_content_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/splash_background"
                    >
                    <LinearLayout
                        android:id="@+id/registerform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/sigininform_background_custom"
                        android:layout_marginLeft="@dimen/signinform_layout_marginLeft"
                        android:layout_marginStart="@dimen/signinform_layout_marginLeft"
                        android:layout_marginRight="@dimen/signinform_layout_marginRight"
                        android:layout_marginEnd="@dimen/signinform_layout_marginRight"
                        android:layout_gravity="center"
                        >
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                >
                                    <EditText
                                        android:id="@+id/r_username"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/r_hint_edittext_userid"
                                        android:layout_gravity="center"
                                        android:padding="@dimen/userid_edittext_padding"
                                        android:layout_marginStart="@dimen/userid_edittext_marginStart"
                                        android:layout_marginLeft="@dimen/userid_edittext_marginStart"
                                        android:layout_marginEnd="@dimen/userid_edittext_marginEnd"
                                        android:layout_marginRight="@dimen/userid_edittext_marginEnd"
                                        />
                                </LinearLayout>
                        <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    >

                            <EditText
                                android:id="@+id/r_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="@dimen/password_edittext_marginEnd"
                                android:layout_marginLeft="@dimen/password_edittext_marginStart"
                                android:layout_marginRight="@dimen/password_edittext_marginEnd"
                                android:layout_marginStart="@dimen/password_edittext_marginStart"
                                android:hint="@string/r_hint_edittext_password"
                                android:inputType="textPassword"
                                android:padding="@dimen/password_edittext_padding" />
                        </LinearLayout>
                        <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    >

                            <Button
                                android:id="@+id/register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/signin_btn_marginbottm"
                                android:layout_marginTop="@dimen/signin_btn_margintop"
                                android:background="@drawable/signin_btn_custom_background"
                                android:text="@string/register_btn_text"
                                android:textColor="@color/colorRed" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>


    </SlidingDrawer>



</FrameLayout>